@@ -47,6 +47,7 @@ Verilator 5.041 devel
 * Fix parsing for sequence expressions (#6427). [Bartłomiej Chmiel, Antmicro Ltd.]
 * Fix resolving parameters (#6388) (#6418) (#6421) (#6438) (#6429). [Artur Bieniek, Antmicro Ltd.]
 * Fix external function declarations with class typedef references (#6433).
+* Fix internal error on out-of-bounds real array access.
 
 
 Verilator 5.040 2025-08-30
